cluster/platforms/proxmox-external-service/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external-service
  namespace: proxmox-external-service
  labels:
    kubernetes.io/service-name: proxmox-external-service
spec:
  ports:
  - name: proxmox-https
    port: 8006
    protocol: TCP
    targetPort: 8006
  type: ClusterIP
