cluster/platforms/proxmox-external-service/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-external-service
  namespace: proxmox-external-service
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: proxmox.${domain_name}
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: proxmox-external-service
            port:
              number: 8006
